--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
 
-    implementation 'com.squareup.dagger:dagger:1.2.5'
+    compile 'com.google.dagger:dagger:2.14.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
